--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,31 @@
         <color name="light_red">#FA5858</color>
         <color name="brown_yellow">#D7DF01</color>
         <color name="ioer_blue">#284496</color>
+
+        <!-- dots inactive colors -->
+        <color name="dot_dark_screen1">#bdbdbd</color>
+        <color name="dot_dark_screen2">#bdbdbd</color>
+        <color name="dot_dark_screen3">#bdbdbd</color>
+        <color name="dot_dark_screen4">#bdbdbd</color>
+
+        <!-- dots active colors -->
+        <color name="dot_light_screen1">#A5DF00</color>
+        <color name="dot_light_screen2">#A5DF00</color>
+        <color name="dot_light_screen3">#A5DF00</color>
+        <color name="dot_light_screen4">#A5DF00</color>
+
+        <array name="array_dot_active">
+                <item>@color/dot_light_screen1</item>
+                <item>@color/dot_light_screen2</item>
+                <item>@color/dot_light_screen3</item>
+                <item>@color/dot_light_screen4</item>
+        </array>
+
+        <array name="array_dot_inactive">
+                <item>@color/dot_dark_screen1</item>
+                <item>@color/dot_dark_screen2</item>
+                <item>@color/dot_dark_screen3</item>
+                <item>@color/dot_dark_screen4</item>
+        </array>
+
 </resources>
