--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -4,38 +4,25 @@
     android:layout_height="match_parent"
     android:background="@color/light_green">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/intro_2_header"
+        android:layout_width="450dp"
+        android:layout_height="350dp"
+        android:src="@drawable/intro_2"
+        android:layout_marginTop="26dp" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/ic_launcher" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/slide_2_title"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_title"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="@dimen/desc_padding"
-            android:paddingRight="@dimen/desc_padding"
-            android:text="@string/slide_2_desc"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
-
-    </LinearLayout>
+        android:layout_below="@+id/intro_2_header"
+        android:text="@string/slide_2_desc"
+        android:gravity="left"
+        android:layout_marginLeft="20pt"
+        android:layout_marginRight="20pt"
+        android:layout_marginTop="10pt"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
 
 
 </RelativeLayout>
