--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
         <color name="ioer_blue">#284496</color>
 
         <!-- dots inactive colors -->
-        <color name="dot_dark_screen1">#bdbdbd</color>
+        <color name="dot_dark_screen1">#284496</color>
         <color name="dot_dark_screen2">#bdbdbd</color>
         <color name="dot_dark_screen3">#bdbdbd</color>
         <color name="dot_dark_screen4">#bdbdbd</color>
