--- a/app/src/main/res/layout/welcome_slide4.xml
+++ b/app/src/main/res/layout/welcome_slide4.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:background="@color/dark_red">
 
+    <!-- TODO: In diesem Slide noch auf die Hilfe hinweisen -->
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
